Database configuration successfull done

--- a/requirements.txt
+++ b/requirements.txt
@@ -73,3 +73,9 @@ phonenumbers==8.13.25
 
 # Performance monitoring
 psutil==5.9.6
+
+# Database dependencies
+sqlalchemy==2.0.23
+psycopg2-binary==2.9.9  # PostgreSQL driver
+alembic==1.13.1         # Database migrations
+redis==5.0.1            # Redis client
